--- a/src/components/pageNation/style.css
+++ b/src/components/pageNation/style.css
@@ -3,8 +3,12 @@
     justify-content: center;
     gap: 28px;
 }
-.pageNation a{
+.pageNation button{
     color: #fff;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
     opacity: 0.6;
+    padding: 5px;
     text-decoration: none;
 }
