--- a/src/components/movieDetail/style.css
+++ b/src/components/movieDetail/style.css
@@ -55,3 +55,51 @@
     align-items: center;
   }
 }
+.movie {
+  display: none;
+  position: absolute;
+  left: 22.3%;
+  top: 25%;
+  background: #2e2a21;
+  border-radius: 10px;
+  padding: 50px;
+  animation: popup 0.7s;
+}
+.movie.active {
+  display: block;
+}
+.detailMovie .pop {
+  background-color: #c64131;
+  color: #fff;
+  border-radius: 5px;
+  padding: 8px 15px;
+  margin-top: 20px;
+  cursor: pointer;
+}
+.app {
+  position: relative;
+}
+.movieVidContent {
+  position: relative;
+}
+.movieVidContent button {
+  position: absolute;
+  background-color: transparent;
+  color: #fff;
+  border: 1px solid;
+  right: -40px;
+  top: -39px;
+  padding: 6px 12px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+@keyframes popup {
+  0% {
+    transform: scale(0.8);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
